[gd_scene load_steps=32 format=3 uid="uid://dnr46qv68apmu"]

[ext_resource type="Texture2D" uid="uid://cp4iq5fd6j8be" path="res://art/background.png" id="1_7gynk"]
[ext_resource type="Script" uid="uid://dh6i1y7tjrv0v" path="res://scenes/battle/battle.gd" id="1_kd6yx"]
[ext_resource type="Script" uid="uid://7r3b56mpfc5e" path="res://scenes/ui/hand.gd" id="2_xd4uy"]
[ext_resource type="AudioStream" uid="uid://c41t7pan2dphc" path="res://art/music/19 Victory (VS Wild Pokemon).mp3" id="3_fe4ja"]
[ext_resource type="AudioStream" uid="uid://bcqjsytvyxds5" path="res://art/music/18 Battle (VS Wild Pokemon).mp3" id="3_pyfix"]
[ext_resource type="Script" uid="uid://cqwjjgje4sygp" path="res://scenes/enemy/enemy_handler.gd" id="4_kd6yx"]
[ext_resource type="PackedScene" uid="uid://cvk0run65cru7" path="res://testing/camera_2d.tscn" id="4_n5ix6"]
[ext_resource type="PackedScene" uid="uid://bru5ajayecy0k" path="res://scenes/player/player.tscn" id="4_oiw7q"]
[ext_resource type="PackedScene" uid="uid://ih1u373ufo54" path="res://scenes/card_target_selector/card_target_selector.tscn" id="4_py4tk"]
[ext_resource type="Texture2D" uid="uid://b8uka45vccpd1" path="res://art/leaf2.png" id="5_8eh2s"]
[ext_resource type="Resource" uid="uid://dw7iw834ey8jm" path="res://characters/bulbasaur/bulbasaur.tres" id="5_fisqk"]
[ext_resource type="Texture2D" uid="uid://de46jp3owuc02" path="res://art/bgs/crystal.png" id="5_ueicy"]
[ext_resource type="Script" uid="uid://c2fu3iiht4n15" path="res://scenes/ui/battle_ui.gd" id="7_icoan"]
[ext_resource type="Script" uid="uid://sef1oxtgt26j" path="res://scenes/player/player_handler.gd" id="8_mxe8n"]
[ext_resource type="PackedScene" uid="uid://b1j2o4bdr8i4q" path="res://scenes/ui/mana_ui.tscn" id="11_fisqk"]
[ext_resource type="PackedScene" uid="uid://b4ceusfsgxuxg" path="res://scenes/party_handler/party_handler.tscn" id="12_156m4"]
[ext_resource type="PackedScene" uid="uid://dr2wwcitt72yh" path="res://scenes/ui/tooltip.tscn" id="12_mxe8n"]
[ext_resource type="Theme" uid="uid://c3anpexwnb0eu" path="res://main_theme.tres" id="13_icoan"]
[ext_resource type="Script" uid="uid://d2wwbjths5rhf" path="res://scenes/ui/red_flash.gd" id="15_t1kk3"]
[ext_resource type="PackedScene" uid="uid://ofgutpuj26p0" path="res://scenes/ui/battle_over_panel.tscn" id="17_6ofp8"]
[ext_resource type="PackedScene" uid="uid://d0sv3khv88a0s" path="res://scenes/ui/card_pile_opener.tscn" id="17_w40i5"]
[ext_resource type="PackedScene" uid="uid://6mq48o6e08j5" path="res://scenes/ui/status_view.tscn" id="18_sgdsx"]
[ext_resource type="PackedScene" uid="uid://domqaoyk0ywyl" path="res://scenes/ui/battle_dialogue_manager.tscn" id="19_e48mi"]
[ext_resource type="PackedScene" uid="uid://gfvm2mvp7prq" path="res://scenes/ui/card_pile_view.tscn" id="20_fe4ja"]
[ext_resource type="PackedScene" uid="uid://cfip7c5hyvwvo" path="res://scenes/ui/pkmn_fainted_ui.tscn" id="23_156m4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7gynk"]
size = Vector2(512, 178)

[sub_resource type="Gradient" id="Gradient_e48mi"]
colors = PackedColorArray(1, 1, 1, 1, 0.299547, 0.299547, 0.299547, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ueicy"]
gradient = SubResource("Gradient_e48mi")

[sub_resource type="Curve" id="Curve_8eh2s"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.5291, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_e48mi"]
width = 64
curve = SubResource("Curve_8eh2s")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_n5ix6"]
lifetime_randomness = 0.3
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(300, 1, 1)
angle_min = 1.07288e-05
angle_max = 57.1
direction = Vector3(-100, 0, 0)
initial_velocity_max = 2.0
angular_velocity_min = -228.37
angular_velocity_max = 145.9
gravity = Vector3(0, 5, 0)
linear_accel_min = 2.64
linear_accel_max = 27.46
radial_accel_min = -2.23517e-06
radial_accel_max = 7.9
scale_min = 0.3
scale_max = 0.7
scale_curve = SubResource("CurveTexture_e48mi")
color_ramp = SubResource("GradientTexture1D_ueicy")

[node name="Battle" type="Node2D"]
script = ExtResource("1_kd6yx")
music = ExtResource("3_fe4ja")
battle_music = ExtResource("3_pyfix")
metadata/_edit_lock_ = true

[node name="Camera2D" parent="." instance=ExtResource("4_n5ix6")]
position = Vector2(256, 144)

[node name="Background" type="Sprite2D" parent="."]
unique_name_in_owner = true
modulate = Color(0.556953, 0.556953, 0.556953, 1)
scale = Vector2(0.486984, 0.532598)
texture = ExtResource("1_7gynk")
centered = false
metadata/_edit_lock_ = true

[node name="Background2" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(0.556953, 0.556953, 0.556953, 1)
scale = Vector2(0.64125, 0.654545)
texture = ExtResource("5_ueicy")
centered = false

[node name="CardDropArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardDropArea"]
position = Vector2(256, 89)
shape = SubResource("RectangleShape2D_7gynk")
debug_color = Color(0, 0.6, 0.701961, 0.0666667)

[node name="EnemyHandler" type="Node2D" parent="." groups=["enemy_handler"]]
script = ExtResource("4_kd6yx")

[node name="Player" parent="." instance=ExtResource("4_oiw7q")]
visible = false
position = Vector2(147, 207)
stats = ExtResource("5_fisqk")

[node name="CardTargetSelector" parent="." instance=ExtResource("4_py4tk")]

[node name="PlayerHandler" type="Node" parent="." node_paths=PackedStringArray("hand", "player")]
script = ExtResource("8_mxe8n")
hand = NodePath("../BattleUI/Hand")
player = NodePath("../Player")

[node name="PartyHandler" parent="." groups=["PartyHandler"] instance=ExtResource("12_156m4")]

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(265, 46)
scale = Vector2(0.486984, 0.532598)
amount = 4
texture = ExtResource("5_8eh2s")
lifetime = 6.0
randomness = 1.0
process_material = SubResource("ParticleProcessMaterial_n5ix6")

[node name="StatUI" type="CanvasLayer" parent="."]

[node name="LeftPanel" type="VBoxContainer" parent="StatUI"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 29.0
offset_top = -59.0
offset_right = 69.0
offset_bottom = -19.0
grow_vertical = 2
theme_override_constants/separation = 10

[node name="RightPanel" type="VBoxContainer" parent="StatUI"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -13.0
offset_top = -62.0
offset_right = 27.0
offset_bottom = -22.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = -3

[node name="BattleUI" type="CanvasLayer" parent="." groups=["ui_layer"]]
unique_name_in_owner = true
script = ExtResource("7_icoan")

[node name="Hand" type="HBoxContainer" parent="BattleUI" node_paths=PackedStringArray("player", "party_handler", "player_handler")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -102.0
offset_top = -52.0
offset_right = 103.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1
script = ExtResource("2_xd4uy")
player = NodePath("../../Player")
party_handler = NodePath("../../PartyHandler")
player_handler = NodePath("../../PlayerHandler")

[node name="ManaUI" parent="BattleUI" instance=ExtResource("11_fisqk")]
offset_left = 2.0
offset_top = -68.0
offset_right = 32.0
offset_bottom = -38.0
char_stats = ExtResource("5_fisqk")

[node name="Tooltip" parent="BattleUI" instance=ExtResource("12_mxe8n")]
offset_top = 36.0
offset_bottom = 91.0

[node name="BattleDialogueManager" parent="BattleUI" instance=ExtResource("19_e48mi")]
offset_top = 36.0
offset_bottom = 92.0

[node name="EndTurnButton" type="Button" parent="BattleUI"]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -145.0
offset_top = -34.0
offset_right = -45.0
offset_bottom = -4.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("13_icoan")
text = "End Turn"

[node name="DrawPileButton" parent="BattleUI" node_paths=PackedStringArray("counter") instance=ExtResource("17_w40i5")]
unique_name_in_owner = true
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -37.0
offset_right = 33.0
offset_bottom = -5.0
grow_vertical = 0
counter = NodePath("Counter")

[node name="Counter" type="Label" parent="BattleUI/DrawPileButton"]
layout_mode = 0
offset_left = 9.0
offset_top = 2.0
offset_right = 25.0
offset_bottom = 11.0
theme_override_constants/outline_size = 1
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DiscardPileButton" parent="BattleUI" node_paths=PackedStringArray("counter") instance=ExtResource("17_w40i5")]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -36.0
offset_top = -37.0
offset_right = -4.0
offset_bottom = -5.0
grow_horizontal = 0
grow_vertical = 0
counter = NodePath("Counter")

[node name="Counter" type="Label" parent="BattleUI/DiscardPileButton"]
layout_mode = 0
offset_left = 9.0
offset_top = 3.0
offset_right = 25.0
offset_bottom = 12.0
theme_override_constants/outline_size = 1
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RedFlash" type="CanvasLayer" parent="."]
layer = 2
script = ExtResource("15_t1kk3")

[node name="ColorRect" type="ColorRect" parent="RedFlash"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.443137, 0.376471, 0)

[node name="Timer" type="Timer" parent="RedFlash"]
wait_time = 0.1
one_shot = true

[node name="BattleOverLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="BattleOverPanel" parent="BattleOverLayer" instance=ExtResource("17_6ofp8")]
visible = false

[node name="CardPileViews" type="CanvasLayer" parent="."]
layer = 4

[node name="DrawPileView" parent="CardPileViews" instance=ExtResource("20_fe4ja")]
unique_name_in_owner = true
visible = false

[node name="DiscardPileView" parent="CardPileViews" instance=ExtResource("20_fe4ja")]
unique_name_in_owner = true
visible = false

[node name="StatusUI" type="CanvasLayer" parent="."]
layer = 4

[node name="StatusView" parent="StatusUI" instance=ExtResource("18_sgdsx")]
visible = false

[node name="FaintUI" type="CanvasLayer" parent="."]
layer = 5

[node name="PkmnFainted" parent="FaintUI" instance=ExtResource("23_156m4")]
process_mode = 3
visible = false

[node name="pixeltester" type="Node2D" parent="."]
visible = false
position = Vector2(394, 153)
